<package>
  <name>saw_socket_streamer</name>
  <version>1.0.0</version>
  <description>
  sawSocketStreamer
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deuet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawSocketStreamer</url>

  <build_depend>cisst</build_depend>

  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
